# SA-MP-2.10-with-Cursor

./: ARCHITECTURE_PLAN.md  BRANCH_PROTECTION_ANALYSIS.md  GITHUB_BRANCH_ANALYSIS.json  MIGRATION_ANALYSIS.md  MODULAR_REFACTORING.md  README.md  build_errors_full.txt  build_output.txt  errors_detailed.txt
app/src/main/cpp/samp/: CMakeLists.txt  main.cpp  main.h  nv_event.h  settings.cpp
app/src/main/cpp/samp/game/: CFileMgr.cpp  CFileMgr.h  CHUD.h  CPlayerInfoGta.h  CSkyBox.cpp  Cam.h  Camera.cpp  Camera.h  CdStreamInfo.h  ColourSet.h  Coronas.cpp  CrossHair.h  ES2VertexBuffer.h  FileLoader.cpp  FileLoader.h  General.cpp  General.h  MemoryMgr.h  PedIntelligence.h  Pickup.h  PlayerPedData.h  Pools.cpp  Pools.h  RGB.h  RQ_Commands.cpp  RealTimeShadowManager.cpp  RegisteredCorona.cpp  RegisteredCorona.h  Renderer.h  RepeatSector.h  RideAnimData.h  ShadowCamera.cpp  Shadows.cpp  SimpleTransform.cpp  SimpleTransform.h  Streaming.h  TimeCycle.h  VisibilityPlugins.cpp  World.h  World_Helper.cpp  (+11 more)
app/src/main/cpp/samp/game/Animation/: AnimAssocDescriptions.cpp  AnimBlendAssociation.cpp  AnimBlendAssociation.h  AnimBlendClumpData.cpp  AnimBlendHierarchy.cpp  AnimBlendHierarchy.h  AnimBlendSequence.cpp  AnimBlendStaticAssociation.cpp  AnimManager.cpp  AnimManager.h  AnimSequenceFrames.h
app/src/main/cpp/samp/game/Collision/: Box.cpp  ColBox.h  ColModel.cpp  ColPoint.h  ColStore.cpp  ColTriangle.cpp  ColTriangle.h  ColTrianglePlane.h  Collision.cpp  CollisionData.cpp  CollisionData.h  Sphere.cpp
app/src/main/cpp/samp/game/Core/: EntryInfoNode.cpp  KeyGen.cpp  KeyGen.h  List_c.cpp  List_c.h  Pool.h  PtrNodeDoubleLink.cpp  PtrNodeSingleLink.cpp  Quaternion.cpp  Quaternion.h  RQVector.h  Vector.cpp  Vector.h  Vector2D.h
app/src/main/cpp/samp/game/Entity/: Building.cpp  CEntityGTA.h  CPedGTA.cpp  CPhysical.cpp  CPhysical.h  CVehicleGTA.cpp  CVehicleGTA.h  Dummy.cpp  Dummy.h  Object.cpp  Placeable.cpp  Placeable.h  PlayerPedGta.cpp  PlayerPedGta.h
app/src/main/cpp/samp/game/Enums/: eMoveState.h  ePedBones.h  eVehicleClass.h  eWeaponSkill.h
app/src/main/cpp/samp/game/Events/: Event.cpp  EventHandlerHistory.h
app/src/main/cpp/samp/game/Models/: AtomicModelInfo.h  BaseModelInfo.cpp  ClumpModelInfo.cpp  ModelInfo.h  PedModelInfo.h  TimeInfo.h
app/src/main/cpp/samp/game/RW/: badevice.h  color.h  image.h  immedi.h  memory.h  pipe.h  raster.h  rphanim.cpp  rphanim.h  rpskin.h  rpworld.cpp  (+11 more)
app/src/main/cpp/samp/gui/: gui.cpp  gui.h  imguiwrapper.cpp  uisettings.h
app/src/main/cpp/samp/java/: jniutil.cpp  jniutil.h
app/src/main/cpp/samp/net/: localplayer.cpp  localplayer.h  netgame.cpp  netgame.h  playerbubblepool.h  remoteplayer.cpp  remoteplayer.h  scriptrpc.cpp  textdrawpool.cpp
app/src/main/cpp/samp/util/: CUtil.cpp  CUtil.h
app/src/main/cpp/samp/voice_new/: Channel.cpp  MicroIcon.cpp  Network.cpp  Playback.cpp  Plugin.cpp
(+121 files in other folders)
